fix bug: page overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 * {
     font-family: 'Work Sans', sans-serif;
+    box-sizing: border-box;
 }
 
-body {
-    max-width: 100%;
-    overflow-x: hidden;
-    box-sizing: border-box;
+html,
+body{
+  max-width: 100%;
+  overflow-x: hidden;
 }
